src/objects/Mortgage__c.object
<CustomObject>
    <description>Objects holds all Mortgage, if any, related to the Applicant(s)</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field associates the Mortgage record to the appropriate Application record</description>
        <inlineHelpText>Application related to this Mortgage record</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Mortage</relationshipLabel>
        <relationshipName>Mortage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Mailing City of Institution / Lender that issued the mortgage loan</description>
        <inlineHelpText>Mailing City of Institution / Lender that issued the mortgage loan</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condo_HOA_Fees_Frequency__c</fullName>
        <label>Condo/HOA Fees Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condo_HOA_Fees__c</fullName>
        <label>Condo/HOA Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Payment__c</fullName>
        <label>Current Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debt_Must_Be_Secured_By_An_Eligible_Lien__c</fullName>
        <formula>IF(ISBLANK(TEXT(Lien_not_due_Taxes_Mechanics_Other__c)) &amp;&amp; ISBLANK(TEXT(Lien_not_owned_by_Federal_State_Local_Go__c)) &amp;&amp; ISBLANK(TEXT(Lien_Existed_Prior_to_the_Disaster__c)),
null
,
IF(ISPICKVAL(Lien_not_due_Taxes_Mechanics_Other__c , &apos;YES&apos;) || ISPICKVAL(Lien_not_owned_by_Federal_State_Local_Go__c , &apos;YES&apos;) || ISPICKVAL(Lien_Existed_Prior_to_the_Disaster__c , &apos;YES&apos;) , 

&apos;YES&apos;, 

&apos;NO&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debt Must Be Secured By An Eligible Lien</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazard_Insurance_Frequency__c</fullName>
        <description>Payment Frequency on Hazard Insurance</description>
        <inlineHelpText>Payment Frequency on Hazard Insurance</inlineHelpText>
        <label>Hazard Insurance Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hazard_Insurance__c</fullName>
        <label>Hazard Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lien_Balance__c</fullName>
        <label>Lien Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lien_Existed_Prior_to_the_Disaster__c</fullName>
        <label>Lien Existed Prior to the Disaster</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lien_Type__c</fullName>
        <label>Lien Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assignment of Land Sales Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment of Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-OP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral Security Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Deed of Trust or Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Security Interest (Non-Real Estate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Security Interest (Real Estate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Security Interest: Manufactured Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Ship&apos;s Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Security Interest (Unspecified Lien Position)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Common Usage for HOA&apos;s and Other Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Housing to be Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subordinate CO-OP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subordinate Deed of Trust or Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subordinate Security Interest (Non-Real Estate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subordinate Security Interest (Real Estate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subordinate Security Interest: Manufactured Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subordinate Ship&apos;s Mortgage</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lien_not_due_Taxes_Mechanics_Other__c</fullName>
        <label>Lien not due (Taxes, Mechanics, Other)</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lien_not_owned_by_Federal_State_Local_Go__c</fullName>
        <label>Lien not owned Federal/State/Local Gov</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lienholder_Name__c</fullName>
        <label>Lienholder Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the Mortgage record to the appropriate Loan record</description>
        <inlineHelpText>Associates the Mortgage record to the appropriate Loan record</inlineHelpText>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Mortage</relationshipLabel>
        <relationshipName>Mortage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <description>Monthly Payment on the mortgage loan</description>
        <inlineHelpText>Monthly Payment on the mortgage loan</inlineHelpText>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_Lender_Name__c</fullName>
        <description>Institution / Lender that issued the mortgage loan</description>
        <inlineHelpText>Institution / Lender that issued the mortgage loan</inlineHelpText>
        <label>Mortgage Lender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Reduction__c</fullName>
        <formula>Current_Payment__c - Post_Refinance_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Refinance_Payment__c</fullName>
        <label>Post Refinance Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Present_Balance__c</fullName>
        <description>Present balance on the mortgage loan</description>
        <inlineHelpText>Present balance on the mortgage loan</inlineHelpText>
        <label>Present Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Mortgages</relationshipLabel>
        <relationshipName>Mortgages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Taxes_Frequency__c</fullName>
        <description>Payment frequency on Real Estate Taxes</description>
        <inlineHelpText>Payment frequency on Real Estate Taxes</inlineHelpText>
        <label>Real Estate Taxes Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Taxes__c</fullName>
        <description>Taxes paid on owned real estate</description>
        <inlineHelpText>Taxes paid on owned real estate</inlineHelpText>
        <label>Real Estate Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refinance_Amount__c</fullName>
        <label>Refinance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refinance_Type__c</fullName>
        <label>Refinance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manufactured Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimbursement for Refinance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refinancing_Comments__c</fullName>
        <label>Refinancing Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Mailing State of Institution / Lender that issued the mortgage loan</description>
        <inlineHelpText>Mailing State of Institution / Lender that issued the mortgage loan</inlineHelpText>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Mailing Street of Institution / Lender that issued the mortgage loan</description>
        <inlineHelpText>Mailing Street of Institution / Lender that issued the mortgage loan</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Mailing Zip Code of Institution / Lender that issued the mortgage loan</description>
        <inlineHelpText>Mailing Zip Code of Institution / Lender that issued the mortgage loan</inlineHelpText>
        <label>Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Mortgage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mortgage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mortgages</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>